# shinbot_plugin_astroassist

./: README.md  metadata.json  pyproject.toml
shinbot_plugin_astroassist/: __init__.py  commands.py  dapiya_floater.py  forecast.py  geo.py  models.py  radar.py  satellite.py  storage.py  template.html  typhoon.py
tests/: conftest.py  test_dapiya_floater.py  test_forecast.py  test_packaging.py  test_satellite.py  test_typhoon.py
