[project]
name = "shinbot-plugin-astroassist"
version = "0.1.0"
description = "晴天钟助手 — 天文气象看板，基于 Open-Meteo ECMWF + 7Timer! 数据。"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["shinbot_plugin_astroassist*"]
